[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/camera_systems/camera_shake/camera_trauma_detector.gd" type="Script" id=1]

[node name="CameraTraumaDetector" type="Area"]
collision_layer = 64
collision_mask = 32
monitorable = false
script = ExtResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
